2007-01-10 Konstantin Triger <kostat@mainsoft.com>

	* ObjectDataSourceView.cs: use case unsensitive comparer for
	 	parameters collection.

2007-01-10 Igor Zelmanovich <igorz@mainsoft.com>

	* LoginStatus.cs: fixed: not causes page validation.

2007-01-10 Igor Zelmanovich <igorz@mainsoft.com>

	* CreateUserWizard.cs: fixed: resolves ErrorMessage control correct.
	* CreateUserWizardStep.cs:

2007-01-10 Igor Zelmanovich <igorz@mainsoft.com>

	* TreeView.cs: fixed: SelectedNode, CheckedNodes.
	* TreeNode.cs:
	* TreeNodeCollection.cs:		

2007-01-10 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed: header and footer does not appear in no items.
	* CompositeDataBoundControl.cs:

2007-01-09 Konstantin Triger <kostat@mainsoft.com>

	* AdRotator.cs: Backport the fix for AdRotator AbsoluteUri to 1.1.

2007-01-09 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed: SelectedDataKey.

2007-01-09 Igor Zelmanovich <igorz@mainsoft.com>

	* Panel.cs:
	* PanelStyle.cs:
	implemented 2.0 features.	

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqlDataSourceView.cs: fixed parameters init for ExecuteUpdate

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* DataSourceCacheManager.cs:
	* ObjectDataSource.cs:
	* SqlDataSource.cs:
	fixed: cache considers parameters values changes.				

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DetailsView.cs: fixed DeleteItem, excluded keys for new values
	* SqlDataSourceView.cs: fixed ExecuteDelete, check cancel in
	OnDeleting event

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed: show all rows when AllowPaging=false

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* SqlDataSourceView.cs: fixed CreateDbParameter, used DBNull for value=null.

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* ButtonField.cs: fixed: consider its CausesValidation property.

2007-01-08 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed: