@@ -1,3 +1,8 @@
+2007-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* SqlDataSourceView.cs: fixed OnUpdating, OnInserting call with
+	SqlDataSourceCommandEventArgs
+
 2007-01-10 Konstantin Triger <kostat@mainsoft.com>
 
 	* ObjectDataSourceView.cs: use case unsensitive comparer for
